// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home renders 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <React.Memo
      launches={
        Array [
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": false,
            "isInProgress": false,
            "isSuccessful": true,
            "isTentative": false,
            "isUpcoming": false,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": true,
            "isInProgress": false,
            "isSuccessful": false,
            "isTentative": false,
            "isUpcoming": false,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": false,
            "isInProgress": false,
            "isSuccessful": false,
            "isTentative": false,
            "isUpcoming": true,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
        ]
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <React.Memo
      showFailed={true}
      showSuccessful={true}
      showUpcoming={false}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <React.Memo
      sortField="flight_number"
      sortOrder="desc"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Component)
      launches={
        Array [
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": false,
            "isInProgress": false,
            "isSuccessful": true,
            "isTentative": false,
            "isUpcoming": false,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": true,
            "isInProgress": false,
            "isSuccessful": false,
            "isTentative": false,
            "isUpcoming": false,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
        ]
      }
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`Home when is loading launches renders a loader 1`] = `
<div
  className="loader"
>
  <WithStyles(Component) />
</div>
`;

exports[`Home when is not loading launches when is updating launches renders info, filters, sorting options, and a loader 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <React.Memo
      launches={
        Array [
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": false,
            "isInProgress": false,
            "isSuccessful": true,
            "isTentative": false,
            "isUpcoming": false,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": true,
            "isInProgress": false,
            "isSuccessful": false,
            "isTentative": false,
            "isUpcoming": false,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": false,
            "isInProgress": false,
            "isSuccessful": false,
            "isTentative": false,
            "isUpcoming": true,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
        ]
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <React.Memo
      showFailed={true}
      showSuccessful={true}
      showUpcoming={false}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <React.Memo
      sortField="flight_number"
      sortOrder="desc"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <div
      className="loader"
    >
      <WithStyles(Component) />
    </div>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`Home when there are no processed launches does not render the sorting options 1`] = `
<WithStyles(Grid)
  container={true}
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <React.Memo
      launches={
        Array [
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": false,
            "isInProgress": false,
            "isSuccessful": true,
            "isTentative": false,
            "isUpcoming": false,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": true,
            "isInProgress": false,
            "isSuccessful": false,
            "isTentative": false,
            "isUpcoming": false,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
          Object {
            "details": "Details",
            "flightNumber": 1,
            "isFailed": false,
            "isInProgress": false,
            "isSuccessful": false,
            "isTentative": false,
            "isUpcoming": true,
            "missionIds": Array [
              "id1",
            ],
            "missionName": "Test",
            "utcDate": Object {
              "getDate": [MockFunction],
              "getFullYear": [MockFunction],
              "getMonth": [MockFunction],
              "toLocaleString": [MockFunction],
            },
          },
        ]
      }
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <React.Memo
      showFailed={true}
      showSuccessful={true}
      showUpcoming={false}
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    xs={12}
  >
    <WithStyles(Component)
      launches={Array []}
    />
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
